testdata/errors/syntax.go
package main

func main(var) { // syntax error
}

// ERROR: # command-line-arguments
// ERROR: syntax.go:3:11: expected ')', found 'var'
